<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<!-- POM file generated with GWT webAppCreator -->
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<artifactId>maven-parent</artifactId>
		<groupId>org.gcube.tools</groupId>
		<version>1.0.0</version>
		<relativePath />
	</parent>
	<groupId>org.gcube.portlets.widgets</groupId>
	<artifactId>file-dw-import-wizard</artifactId>
	<packaging>jar</packaging>
	<version>1.3.0-4.11.1-130421</version>

	<name>file-dw-import-wizard</name>
	<description>file-dw-import-wizard support import file</description>

	<scm>
		<url>https://svn.d4science.research-infrastructures.eu/gcube/trunk/portlets/widgets/file-dw-import-wizard</url>
	</scm>



	<developers>
		<developer>
			<name>Giancarlo Panichi</name>
			<email>g.panichi@isti.cnr.it</email>
			<organization>CNR Pisa, Istituto di Scienza e Tecnologie dell'Informazione "A. Faedo"</organization>
			<roles>
				<role>architect</role>
				<role>developer</role>
			</roles>
		</developer>
		<developer>
			<name>Angela Italiano</name>
			<email>angela.italiano@isti.cnr.it</email>
			<organization>CNR Pisa, Istituto di Scienza e Tecnologie dell'Informazione "A. Faedo"</organization>
			<roles>
				<role>architect</role>
				<role>developer</role>
			</roles>
		</developer>

	</developers>


	<properties>
		<distroDirectory>distro</distroDirectory>
		<configDirectory>config</configDirectory>
		<webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>

		<!-- GWT configuration -->
		<gwtVersion>2.6.1</gwtVersion>
		<!-- <gwtLogVersion>3.3.2</gwtLogVersion> -->
		<gxtVersion>3.1.1</gxtVersion>
		<gxt2Version>2.6.1</gxt2Version>

		<KEYS>${env.KEYS}</KEYS>

		<!-- GWT needs at least java 1.5 -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>



	<profiles>
		<profile>
			<id>localRun</id>
			<dependencies>
				<dependency>
					<groupId>ch.qos.logback</groupId>
					<artifactId>logback-classic</artifactId>
					<version>1.0.13</version>
					<scope>runtime</scope>
				</dependency>

				<dependency>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-api</artifactId>
					<scope>compile</scope>
				</dependency>
			</dependencies>
		</profile>
	</profiles>

	<dependencies>
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-user</artifactId>
			<version>${gwtVersion}</version>
		</dependency>

		<!-- GXT 2 -->
		<dependency>
			<groupId>com.sencha.gxt</groupId>
			<artifactId>gxt2.2.5-gwt2.X</artifactId>
			<version>${gxt2Version}</version>
		</dependency>

		<dependency>
			<groupId>org.gcube.applicationsupportlayer</groupId>
			<artifactId>aslcore</artifactId>
		</dependency>
		<dependency>
			<groupId>com.ibm.icu</groupId>
			<artifactId>icu4j</artifactId>
			<version>51.2</version>
			<scope>compile</scope>
		</dependency>

		<!-- WSLT dependencies -->
		<dependency>
			<groupId>org.gcube.portlets.widgets</groupId>
			<artifactId>workspace-explorer</artifactId>
			<version>1.8.0-4.11.1-162535</version>
		</dependency>

		<dependency>
			<groupId>org.gcube.common</groupId>
			<artifactId>home-library</artifactId>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.gcube.common</groupId>
			<artifactId>home-library-jcr</artifactId>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>xerces</groupId>
			<artifactId>xercesImpl</artifactId>
			<version>2.6.0</version>
		</dependency>

		<dependency>
			<groupId>rapidminer-custom</groupId>
			<artifactId>yasmeen-converter</artifactId>
			<version>1.2.0</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.gcube.common</groupId>
			<artifactId>csv4j</artifactId>
			<version>1.2.0-4.11.1-130659</version>
		</dependency>
		<!-- <dependency> -->
		<!-- <groupId>com.sencha.gxt</groupId> -->
		<!-- <artifactId>gxt</artifactId> -->
		<!-- </dependency> -->

		<dependency>
			<groupId>com.googlecode.juniversalchardet</groupId>
			<artifactId>juniversalchardet</artifactId>
			<version>1.0.3</version>
		</dependency>
		<dependency>
			<groupId>commons-fileupload</groupId>
			<artifactId>commons-fileupload</artifactId>
			<scope>compile</scope>
		</dependency>
		<!-- <dependency> -->
		<!-- <groupId>com.allen-sauer.gwt.log</groupId> -->
		<!-- <artifactId>gwt-log</artifactId> -->
		<!-- </dependency> -->


		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
		</dependency>

		<dependency>
			<groupId>javax.portlet</groupId>
			<artifactId>portlet-api</artifactId>
		</dependency>

		<dependency>
			<groupId>org.gcube.portlets.user</groupId>
			<artifactId>gcube-widgets</artifactId>
		</dependency>

		<!-- <dependency> -->
		<!-- <groupId>org.gcube.applicationsupportlayer</groupId> -->
		<!-- <artifactId>aslcore</artifactId> -->

		<!-- </dependency> -->

		<dependency>
			<groupId>org.gcube.portal</groupId>
			<artifactId>custom-portal-handler</artifactId>
		</dependency>

		<dependency>
			<groupId>xalan</groupId>
			<artifactId>xalan</artifactId>
			<version>2.6.0</version>
			<scope>provided</scope>
		</dependency>


		<!-- <dependency> -->
		<!-- <groupId>org.slf4j</groupId> -->
		<!-- <artifactId>slf4j-log4j12</artifactId> -->
		<!-- <version>1.6.1</version> -->
		<!-- </dependency> -->


		<dependency>
			<groupId>org.gcube.applicationsupportlayer</groupId>
			<artifactId>aslsocial</artifactId>

		</dependency>

		<dependency>
			<groupId>org.gwtopenmaps.openlayers</groupId>
			<artifactId>gwt-openlayers-client</artifactId>
			<version>0.6</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-servlet</artifactId>
			<scope>provided</scope>
		</dependency>
		<!-- <dependency> -->
		<!-- <groupId>ch.qos.logback</groupId> -->
		<!-- <artifactId>logback-classic</artifactId> -->
		<!-- <version>1.0.1</version> -->
		<!-- </dependency> -->
		<!-- <dependency> -->
		<!-- <groupId>log4j</groupId> -->
		<!-- <artifactId>log4j</artifactId> -->
		<!-- </dependency> -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
		</dependency>

		<dependency>
			<groupId>com.liferay.portal</groupId>
			<artifactId>portal-service</artifactId>
		</dependency>


	</dependencies>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.gcube.distribution</groupId>
				<artifactId>maven-portal-bom</artifactId>
				<version>3.3.0-4.11.1-144184</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<build>
		<!-- Generate compiled stuff in the folder used for developing mode -->
		<outputDirectory>${webappDirectory}/WEB-INF/classes</outputDirectory>
		<resources>
			<resource>
				<directory>src/main/java</directory>
				<includes>
					<include>**/*.*</include>
				</includes>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
				<includes>
					<include>**/*.*</include>
				</includes>
			</resource>
		</resources>
		<plugins>


			<!-- GWT Maven Plugin -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>gwt-maven-plugin</artifactId>
				<version>${gwtVersion}</version>
				<executions>
					<execution>
						<configuration>
							<module>org.gcube.portlets.widgets.filedwimportwizard</module>
						</configuration>
						<goals>
							<!-- <goal>compile</goal> -->
						</goals>
					</execution>
				</executions>
				<configuration>
					<runTarget>filedwimportwizard.html</runTarget>
					<hostedWebapp>${webappDirectory}</hostedWebapp>
					<!-- <extraJvmArgs>-Xmx1024m</extraJvmArgs> -->
					<extraJvmArgs>-Xss512m -Xmx2048m -XX:MaxPermSize=2048m</extraJvmArgs>


				</configuration>

			</plugin>

			<!-- Copy static web files before executing gwt:run -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>2.1.1</version>
				<executions>
					<execution>
						<phase>compile</phase>
						<!--<goals> <goal>exploded</goal> </goals> -->
					</execution>
				</executions>
				<configuration>
					<webappDirectory>${webappDirectory}</webappDirectory>
					<warName>${project.build.finalName}</warName>

					<!-- Include static jar into WEB-INF/lib -->
					<!-- <webResources> <resource> <directory>lib</directory> <includes> 
						<include>*.jar</include> </includes> <targetPath>WEB-INF/lib</targetPath> 
						</resource> </webResources> -->
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>2.2</version>
				<configuration>
					<descriptors>
						<descriptor>${distroDirectory}/descriptor.xml</descriptor>
					</descriptors>
				</configuration>
				<executions>
					<execution>
						<id>servicearchive</id>
						<phase>install</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>


</project>
